fix(theme-chalk): :bug: fix search el-row width overflow
PlusLayout内使用PlusSearch出现横向滚动条 #117

--- a/packages/theme-chalk/src/form.scss
+++ b/packages/theme-chalk/src/form.scss
@@ -9,6 +9,9 @@
       padding: 0;
     }
   }
+  @include e(row) {
+   width: 100%;
+  }
   @include e(footer) {
     display: flex;
     justify-content: flex-end;
